--- a/meta_analysis/meta_analysis_with_R.html
+++ b/meta_analysis/meta_analysis_with_R.html
@@ -1652,7 +1652,7 @@ variable name
 </p>
 </div>
 <div id="mean-difference" class="section level4">
-<h4>1.1.1 <strong>Mean Difference</strong></h4>
+<h4><strong>1.1.1 Mean Difference</strong></h4>
 <p>THe estimated mean difference <span class="math inline">\(\hat \mu_k
 = \hat \mu_{ek} - \hat \mu_{ck}\)</span><br />
 variance estimate : <span class="math inline">\(Var(\hat \mu_k) = \frac
@@ -1693,6 +1693,53 @@ round(c(MD, MD + c(-1,1) * qnorm(1-(0.05/2)) * seMD), 2)</code></pre>
 zscore &lt;- MD/seMD
 round(c(zscore, 2*pnorm(abs(zscore), lower.tail=FALSE)), 4)</code></pre>
 <pre><code>## [1] -1.0206  0.3074</code></pre>
+</div>
+<div id="standardised-mean-difference" class="section level4">
+<h4><strong>1.1.2 Standardised Mean Difference</strong></h4>
+<p>In many settings differences in the individual studies SDM : <span class="math inline">\(\hat g_K = (1 - \frac {3}{4n_k - 9}) \frac {\hat
+\mu_{ek} - \hat \mu_{ck}}{\sqrt ((n_{ek} - 1)s_{ek}^2 + (n_{ck}
+-1)s_{ck}^2)/(n_{k} - 2)}\)</span><br />
+variance : <span class="math inline">\(Var(\hat g_k) = \frac
+{n_k}{n_{ek}\times{n_{ck}}} + \frac {\hat g_k^2}{2(n_k -
+3.94)}\)</span><br />
+confidence interval : <span class="math inline">\(\hat g_k \pm Z_{1 -
+\frac {\alpha}{2}} \sqrt Var(\hat g_k)\)</span></p>
+<pre class="r"><code># 1. Read in the data:
+data2 &lt;- read.csv(&quot;data/dataset02.csv&quot;)
+# 2. As usual, to view an object, type its name:
+data2</code></pre>
+<div data-pagedtable="false">
+<script data-pagedtable-source type="application/json">
+{"columns":[{"label":["author"],"name":[1],"type":["chr"],"align":["left"]},{"label":["Ne"],"name":[2],"type":["int"],"align":["right"]},{"label":["Me"],"name":[3],"type":["dbl"],"align":["right"]},{"label":["Se"],"name":[4],"type":["dbl"],"align":["right"]},{"label":["Nc"],"name":[5],"type":["int"],"align":["right"]},{"label":["Mc"],"name":[6],"type":["dbl"],"align":["right"]},{"label":["Sc"],"name":[7],"type":["dbl"],"align":["right"]}],"data":[{"1":"Blashki(75%150)","2":"13","3":"6.40","4":"5.40","5":"18","6":"11.40","7":"9.60"},{"1":"Hormazabal(86)","2":"17","3":"11.00","4":"8.20","5":"16","6":"19.00","7":"8.20"},{"1":"Jacobson(75-100)","2":"10","3":"17.50","4":"8.80","5":"6","6":"23.00","7":"8.80"},{"1":"Jenkins(75)","2":"7","3":"12.30","4":"9.90","5":"7","6":"20.00","7":"10.50"},{"1":"Lecrubier(100)","2":"73","3":"15.70","4":"10.60","5":"73","6":"18.70","7":"10.60"},{"1":"Murphy(100)","2":"26","3":"8.50","4":"11.00","5":"28","6":"14.50","7":"11.00"},{"1":"Nandi(97)","2":"17","3":"25.50","4":"24.00","5":"10","6":"53.20","7":"11.20"},{"1":"Petracca(100)","2":"11","3":"6.20","4":"7.60","5":"10","6":"10.00","7":"7.60"},{"1":"Philipp(100)","2":"105","3":"-8.10","4":"3.90","5":"46","6":"-8.50","7":"5.20"},{"1":"Rampello(100)","2":"22","3":"13.40","4":"2.30","5":"19","6":"19.70","7":"1.30"},{"1":"Reifler(83)","2":"13","3":"12.50","4":"7.60","5":"15","6":"12.50","7":"7.60"},{"1":"Rickels(70)","2":"29","3":"1.99","4":"0.77","5":"39","6":"2.54","7":"0.77"},{"1":"Robertson(75)","2":"13","3":"11.00","4":"8.20","5":"13","6":"15.00","7":"8.20"},{"1":"Rouillon(98)","2":"78","3":"15.80","4":"6.80","5":"71","6":"17.10","7":"7.20"},{"1":"Tan(70)","2":"23","3":"-8.50","4":"8.60","5":"23","6":"-8.30","7":"6.00"},{"1":"Tetreault(50-100)","2":"11","3":"51.90","4":"18.50","5":"11","6":"74.30","7":"18.50"},{"1":"Thompson(75)","2":"11","3":"8.00","4":"8.10","5":"18","6":"10.00","7":"9.70"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+  </script>
+</div>
+<pre class="r"><code># 3. Calculate total sample sizes
+summary(data2$Ne+data2$Nc)</code></pre>
+<pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   14.00   26.00   31.00   53.06   54.00  151.00</code></pre>
+<pre class="r"><code># 1. Calculate standardised mean difference (SMD) and
+#    its standard error (seSMD) for study 1 (Blashki) of
+#    dataset data2:
+N &lt;- with(data2[1,], Ne + Nc)
+SMD &lt;- with(data2[1,],
+            (1 - 3/(4 * N - 9)) * (Me - Mc) /
+            sqrt(((Ne - 1) * Se^2 + (Nc - 1) * Sc^2)/(N - 2)))
+seSMD &lt;- with(data2[1,],
+              sqrt(N/(Ne * Nc) + SMD^2/(2 * (N - 3.94))))
+# 2. Print standardised mean difference and limits of 95% CI
+#    interval using round function to show only two digits:
+round(c(SMD, SMD + c(-1,1) * qnorm(1-(0.05/2)) * seSMD), 2)</code></pre>
+<pre><code>## [1] -0.60 -1.33  0.13</code></pre>
+<pre class="r"><code>print(metacont(Ne, Me, Se, Nc, Mc, Sc, sm=&quot;SMD&quot;,
+               data=data2, subset=1), digits=2)</code></pre>
+<pre><code>## Number of observations: o = 31
+## 
+##     SMD        95%-CI     z p-value
+## 1 -0.60 [-1.33; 0.13] -1.61  0.1082
+## 
+## Details:
+## - Inverse variance method
+## - Hedges&#39; g (bias corrected standardised mean difference; using exact formulae)</code></pre>
 </div>
 </div>
 </div>
